--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <h2>À propos de moi</h2>
       <p>Le code moral du judo se compose de plusieurs valeurs fondamentales qui guident les pratiquants dans leur discipline et dans la vie quotidienne.</p>
       <p>J'adore apprendre de nouvelles technologies et partager mes découvertes.💻✨</p>
+      <p> le judo est basé sur la souplesse, la rapidité et l'utilisation de l'élan de l'adversaire!</p>
     </section>
   </main>
 
