--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+    <p>Nouvelle ligne rajoutée manuellement en local, test !</p>
 
   <header>
     <h1>Bienvenue sur ma page web !</h1>
